--- a/index.html
+++ b/index.html
@@ -3,8 +3,11 @@
 <head>
 	<meta charset="UTF-8">
 	<title>index</title>
+	<style>
+		
+	</style>
 </head>
 <body>
-	
+	<div class="div1"></div>
 </body>
 </html>
